--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@
 
 .footer-container{
     width: 1300px;
+    margin: auto;
     display: flex;
 }
 
@@ -238,7 +239,7 @@
     width: 480px;
     margin: auto;
     margin-top: 130px;
-    margin-left: 230px;
+    margin-left: 0;
     margin-bottom: 130px;
     text-align: left;
 }
